# tukosmo

./: .env  .gitignore  Cargo.toml  Dockerfile  GNUmakefile  LICENSE  README.md  diesel.toml  docker-compose.yml
crates/application/: Cargo.toml
crates/domain/: Cargo.toml
crates/hydration/: Cargo.toml
crates/infrastructure/: Cargo.toml
crates/server/: Cargo.toml
data/: Tukosmo.toml
data/assets/locale/: en.json  es.json
src/: lib_application.rs  lib_domain.rs  lib_hydration.rs  lib_infrastructure.rs  main.rs  main.scss
src/core/language/application/dto/: dto_language.rs  mod.rs
src/core/language/application/use_case/: language_use_case.rs  mod.rs
src/core/language/domain/: error.rs  mod.rs
src/core/language/domain/model/: i18n_text.rs  i18n_translation.rs  language.rs  mod.rs
src/core/language/domain/repository/: language_repository.rs  mod.rs
src/core/language/infrastructure/: mod.rs
src/core/language/infrastructure/diesel_orm/model/: db_i18n_text.rs  db_i18n_translation.rs  db_language.rs  mod.rs
src/core/language/infrastructure/diesel_orm/repository/: db_language_repository.rs  mod.rs
src/core/language/infrastructure/diesel_orm/service/: i18n_text_manager.rs  language_manager.rs  mod.rs
src/core/language/infrastructure/diesel_orm/statement/: i18n_text_sql_executor.rs  i18n_translation_sql_executor.rs  language_sql_executor.rs  mod.rs
src/core/language/infrastructure/leptos_actix_server/api/: language_api.rs  mod.rs
src/core/language/infrastructure/leptos_ui/: mod.rs
src/core/language/infrastructure/leptos_ui/model/: form_field.rs  language_form.rs  mod.rs
src/core/language/infrastructure/leptos_ui/view/: mod.rs  tap_add_language_view.rs  tap_delete_language_view.rs  tap_edit_language_view.rs  tap_languages_view.rs
src/core/language/infrastructure/leptos_ui/widget/: mod.rs  tap_form.rs
src/core/shared/application/dto/: dto_delete_form.rs  dto_initial_data.rs  dto_local_i18n.rs  mod.rs
src/core/shared/application/service/: mod.rs  transaction.rs
src/core/shared/application/use_case/: global_use_case.rs  mod.rs
src/core/shared/domain/: error.rs
src/core/shared/domain/model/: domain_error.rs  local_i18n.rs  mod.rs  pagination_criteria.rs  server_config.rs  server_response.rs  transaction.rs
src/core/shared/domain/repository/: data_repository.rs  mod.rs
src/core/shared/infrastructure/diesel_orm/: mod.rs  schema.rs
src/core/shared/infrastructure/diesel_orm/migration/2023-09-12-145950_tukosmo_initial_setup/: down.sql  up.sql
src/core/shared/infrastructure/diesel_orm/model/: db_transaction.rs  mod.rs
src/core/shared/infrastructure/diesel_orm/statement/: mod.rs  model_sql_executor.rs
src/core/shared/infrastructure/leptos_actix_server/: mod.rs
src/core/shared/infrastructure/leptos_actix_server/api/: global_api.rs  mod.rs
src/core/shared/infrastructure/leptos_actix_server/repository/: fs_data_repository.rs  mod.rs
src/core/shared/infrastructure/leptos_actix_server/service/: file_system.rs  mod.rs  server.rs  tls.rs  toml.rs
src/core/shared/infrastructure/leptos_ui/: app.rs  mod.rs
src/core/shared/infrastructure/leptos_ui/context/: global_context.rs  mod.rs
src/core/shared/infrastructure/leptos_ui/layout/: _base.scss  i18n_layout.rs  mod.rs  tap_layout.rs  tap_layout.scss  web_layout.rs  web_layout.scss
src/core/shared/infrastructure/leptos_ui/model/: delete_form.rs  form_field.rs  mod.rs
src/core/shared/infrastructure/leptos_ui/service/: mod.rs  navigation.rs  server.rs
src/core/shared/infrastructure/leptos_ui/view/: mod.rs  root_view.rs  tap_dashboard_view.rs  web_home_view.rs  web_not_found_view.rs
src/core/shared/infrastructure/leptos_ui/widget/: icon.rs  loading_screen.rs  loading_screen.scss  loading_top_bar.rs  loading_top_bar.scss  mod.rs  tap_form.rs  tap_loading.rs  tap_pagination_buttons.rs
src/core/tag/infrastructure/: mod.rs
src/core/user/application/dto/: dto_user.rs  mod.rs
src/core/user/application/use_case/: mod.rs  user_use_case.rs
src/core/user/domain/: error.rs
src/core/user/domain/model/: mod.rs  user.rs  user_browser.rs  user_encrypted_password.rs  user_platform.rs  user_session.rs
src/core/user/domain/repository/: user_repository.rs
src/core/user/infrastructure/: mod.rs
src/core/user/infrastructure/diesel_orm/: mod.rs
src/core/user/infrastructure/diesel_orm/model/: db_user.rs  db_user_session.rs  mod.rs
src/core/user/infrastructure/diesel_orm/repository/: db_user_repository.rs  mod.rs
src/core/user/infrastructure/diesel_orm/service/: mod.rs  user_manager.rs  user_session_manager.rs
src/core/user/infrastructure/diesel_orm/statement/: mod.rs  user_session_sql_executor.rs  user_sql_executor.rs
src/core/user/infrastructure/leptos_actix_server/api/: user_api.rs
src/core/user/infrastructure/leptos_ui/: mod.rs
src/core/user/infrastructure/leptos_ui/model/: mod.rs  user_form.rs
src/core/user/infrastructure/leptos_ui/view/: mod.rs  tap_add_user_view.rs  tap_edit_user_view.rs  tap_users_view.rs  web_login_view.rs
