[workspace]
members = [
    "crates/application",
    "crates/domain",
    "crates/infrastructure",
    "crates/server",
    "crates/hydration",
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.dependencies]
acme-micro = { version = "0.12.0" }
actix-files = { version = "0.6.2" }
actix-identity = { version = "0.6.0" }
actix-multipart = { version = "0.6.1" }
actix-session = { version = "0.8.0", features = ["cookie-session"] }
actix-web = { version = "4.4.0", features = ["macros", "rustls"] }
argon2 = { version = "0.5.2" }
cfg-if = "1"
chrono = { version = "0.4.31", features = ["serde"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
diesel = { version = "2.1.4", features = ["chrono", "postgres", "uuid", "i-implement-a-third-party-backend-and-opt-into-breaking-changes"] }
dotenvy = "0.15.7"
futures = { version = "0.3.29" }
futures-util = { version = "0.3.29" }
leptos = { version = "0.5.4", features = ["nightly"] }
leptos_actix = { version = "0.5.4" }
leptos_icons = { version = "0.1.0", features = [
    "BsArchiveFill",
    "BsBlockquoteLeft",
    "BsBookmarkStarFill",
    "BsCloudDownloadFill",
    "BsCreditCardFill",
    "BsDatabaseFill",
    "BsEthernet",
    "BsFileEarmarkTextFill",
    "BsGlobe2",
    "BsGrid1x2Fill",
    "BsHouseFill",
    "BsImages",
    "BsKanbanFill",
    "BsLayoutSidebarInsetReverse",
    "BsLayoutTextWindow",
    "BsLifePreserver",
    "BsList",
    "BsListTask",
    "BsPalette2",
    "BsPeopleFill",
    "BsPieChartFill",
    "BsQuestionSquareFill",
    "BsShop",
    "BsStarFill",
    "BsStars",
    "BsTagFill",
    "BsTranslate"
] }
leptos_meta = { version = "0.5.4", features = ["nightly"] }
leptos_router = { version = "0.5.4", features = ["nightly"] }
log = "0.4.20"
openssl = { version = "0.10.61", features = ["v110"] }
rand = { version = "0.8.5" }
rcgen = { version = "0.11.3" }
regex = { version = "1.10.2" }
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
rustls = { version = "0.20.6" }
rustls-pemfile = { version = "1.0.3" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
toml = { version = "0.8.8" }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
wasm-bindgen = { version = "=0.2.87", features = ["serde-serialize"] }
web-sys = "0.3.63"

# See https://github.com/akesson/cargo-leptos for documentation

[[workspace.metadata.leptos]]
assets-dir = "data/assets"
bin-default-features = false
bin-features = []
bin-package = "tukosmo_server"
browserquery = "defaults"
end2end-cmd = "npx playwright test" # TODO
end2end-dir = "end2end" # TODO
env = "DEV"
lib-default-features = false
lib-features = []
lib-package = "tukosmo_hydration"
name = "site"
reload-port = 8002
site-addr = "0.0.0.0:8001"
site-pkg-dir = "pkg"
site-root = "target/site"
style-file = "src/main.scss"
watch = false
