[package]
edition = "2021"
name = "tukosmo_domain"
version = "0.1.0"

[lib]
path = "../../src/lib_domain.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[features]
default = []
hydrate = []
ssr = []
