[package]
edition = "2021"
name = "tukosmo_domain"
version = "0.1.0"

[lib]
path = "../../src/lib_domain.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { workspace = true, optional = true }
chrono.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[features]
default = []
hydrate = []
ssr = [
    "dep:argon2"
]
